# ksystemstats_custom_sensors

./: .gitignore  CMakeLists.txt  README.md  ksystemstatsplugin.cpp  ksystemstatsplugin.h  metadata.json  myscript.sh
